<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<artifactId>webadmin-modules</artifactId>
		<groupId>org.ovirt.engine.ui</groupId>
		<version>3.0.0-0001</version>
	</parent>

	<artifactId>webadmin</artifactId>
	<packaging>war</packaging>
	<name>WebAdmin</name>
	<description>oVirt Web based Administration GUI</description>

	<properties>
		<!--TODO: Will be inherited from top module -->
		<gwt.version>2.3.0</gwt.version>
		<gwtp.version>0.6</gwtp.version>
		<guice.version>3.0</guice.version>
		<gin.version>1.5.0</gin.version>
		<junit.version>4.8.1</junit.version>
		<mockito.version>1.8.5</mockito.version>

		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
		<!--Version 2.5 is important? currently version is inherited from parent -->
		<maven-resources-plugin.version>2.5</maven-resources-plugin.version>
		<maven-war-plugin.version>2.1.1</maven-war-plugin.version>
		<build-helper-maven-plugin.version>1.5
		</build-helper-maven-plugin.version>
		<gwt-maven-plugin.version>2.3.0-1</gwt-maven-plugin.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- tell the compiler we can use 1.6 -->
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>

		<!-- Activate load time weaving of the aspects -->
		<aspectj.agent>-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar</aspectj.agent>

		<!-- Regular expression that matches the types that the GWT compiler shouldn't 
			prune -->
		<gwt.dontPrune>-Dgwt.dontPrune=org\.ovirt\.engine\.core\.(common|compat)\..*</gwt.dontPrune>

		<!-- This can be overidded by setting this property in your personal settings.xml -->
		<gwt-plugin.extraJvmArgs>${aspectj.agent} -Xms1024M -Xmx2048M -XX:PermSize=256M -XX:MaxPermSize=256M ${gwt.dontPrune}</gwt-plugin.extraJvmArgs>

		<!-- Set gwt.userAgent property via the resource plugin during the resource phase,
		By default, all browsers are supported, see [gwt-user.jar:com/google/gwt/user/UserAgent.gwt.xml] for a complete list -->
		<gwt.userAgent>ie6,ie8,ie9,gecko1_8,safari,opera</gwt.userAgent>

		<!-- Directory into which JSR 269 annotation processors generate their 
			sources -->
		<maven-compiler-plugin.generatedSourcesDirectory>${project.build.directory}/generated-sources/annotations
		</maven-compiler-plugin.generatedSourcesDirectory>
		<!--<apt-generated.directory>${project.build.directory}/generated-sources/apt</apt-generated.directory> -->

	</properties>

	<!-- TODO: Define SCM -->
	<dependencies>
		<!-- Internal modules dependencies -->
		<!-- GWT dependencies (from central repo) -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwt.version}</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- GWTP MVP component -->
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-mvp-client</artifactId>
			<version>${gwtp.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-processors</artifactId>
			<version>${gwtp.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Guice and GIN -->
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>${guice.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.inject.extensions</groupId>
			<artifactId>guice-assistedinject</artifactId>
			<version>${guice.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.google.gwt.inject</groupId>
			<artifactId>gin</artifactId>
			<version>${gin.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>com.google.inject</groupId>
					<artifactId>guice</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.inject.extensions</groupId>
					<artifactId>guice-assistedinject</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<version>${gwt.version}</version>
			<scope>provided</scope>
		</dependency>


		<!-- Unit testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- oVirt dependencies -->
		<dependency>
			<groupId>${engine.groupId}</groupId>
			<artifactId>uicommonweb</artifactId>
			<version>${engine.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>${engine.groupId}</groupId>
			<artifactId>genericapi</artifactId>
			<version>${engine.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>${engine.groupId}</groupId>
			<artifactId>sharedgwt</artifactId>
			<version>${engine.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>${engine.groupId}</groupId>
			<artifactId>frontend</artifactId>
			<version>${engine.version}</version>
		</dependency>

		<dependency>
			<groupId>${engine.groupId}</groupId>
			<artifactId>gwt-extension</artifactId>
			<version>${engine.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
            <groupId>org.jboss.spec.javax.ejb</groupId>
            <artifactId>jboss-ejb-api_3.1_spec</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<scope>provided</scope>
			<version>${aspectj.version}</version>
		</dependency>
	</dependencies>

	<build>
		<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes
		</outputDirectory>

		<!-- <finalName>webadmin</finalName> -->
		<!-- Currently maven resource sttructure contains all static content. -->
		<resources>
			<resource>
				<targetPath>${project.build.directory}/generated-sources/gwt</targetPath>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.java</include>
				</includes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven-war-plugin.version}</version>
				<configuration>
					<packagingExcludes>WEB-INF/deploy/**,WEB-INF/classes/**</packagingExcludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<generatedSourcesDirectory>${maven-compiler-plugin.generatedSourcesDirectory}
					</generatedSourcesDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>add-apt-sources</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${maven-compiler-plugin.generatedSourcesDirectory}</source>
								<source>${project.build.directory}/generated-sources/gwt</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>gwt-maven-plugin</artifactId> 
				<executions> <execution> <goals> <goal>compile</goal> <goal>test</goal> </goals> 
				</execution> </executions> <configuration> <runTarget>webadmin/Application.html</runTarget> 
				<extraJvmArgs>${gwt-plugin.extraJvmArgs}</extraJvmArgs> <debugSuspend>false</debugSuspend> 
				</configuration> </plugin> -->

			<!-- ====================================================================== -->
			<!-- It's possible to use the target/web.xml file mergewebxml produces, 
				by -->
			<!-- making the war plugin to use it. It's possible to exclude what -->
			<!-- neccessary from the final artifact here. -->
			<!-- ====================================================================== -->
			<!-- <plugin> <artifactId>maven-war-plugin</artifactId> <configuration> 
				<webXml>target/web.xml</webXml> <warSourceExcludes>.gwt-tmp/**</warSourceExcludes> 
				</configuration> </plugin> <plugin> <artifactId>maven-compiler-plugin</artifactId> 
				<configuration> <source>${maven.compiler.source}</source> <target>${maven.compiler.target}</target> 
				</configuration> </plugin> -->
			<plugin>
			    <artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>gwt-admin</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>gwt-maven-plugin</artifactId>
						<version>${gwt-maven-plugin.version}</version>
						<dependencies>
							<dependency>
								<groupId>com.google.gwt</groupId>
								<artifactId>gwt-user</artifactId>
								<version>${gwt.version}</version>
							</dependency>
							<dependency>
								<groupId>com.google.gwt</groupId>
								<artifactId>gwt-dev</artifactId>
								<version>${gwt.version}</version>
							</dependency>
							<dependency>
								<groupId>com.google.gwt</groupId>
								<artifactId>gwt-servlet</artifactId>
								<version>${gwt.version}</version>
							</dependency>
							<!-- Add gwt-extension aspjects to the GWT compiler classpath -->
							<dependency>
								<groupId>${engine.groupId}</groupId>
								<artifactId>gwt-extension</artifactId>
								<version>${engine.version}</version>
							</dependency>
						</dependencies>
						<configuration>
							<logLevel>INFO</logLevel>
							<style>OBF</style>
							<runTarget>/webadmin/webadmin/WebAdmin.html</runTarget>
							<port>8080</port>
							<noServer>true</noServer>
							<bindAddress>0.0.0.0</bindAddress>
							<gen>gen</gen>
							<!-- <modules> <module>${project.groupId}.WebAdmin</module> </modules> -->
							<extraJvmArgs>${gwt-plugin.extraJvmArgs}</extraJvmArgs>
							<copyWebapp>true</copyWebapp>
							<compileSourcesArtifacts>
								<compileSourcesArtifact>${engine.groupId}:gwt-extension</compileSourcesArtifact>
								<compileSourcesArtifact>${engine.groupId}:uicommonweb</compileSourcesArtifact>
							</compileSourcesArtifacts>
							<!--Why asm is excluded? -->
							<runClasspathExcludes>
								<runClasspathExclude>asm-3.3.jar</runClasspathExclude>
							</runClasspathExcludes>
						</configuration>

						<executions>
							<execution>
								<id>gwtcompile</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>compile</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>gwtdev</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>build-helper-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>add-source</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>add-source</goal>
								</goals>
								<configuration>
									<sources>
										<source>../uicommonweb/src/main/java</source>
										<source>../gwt-extension/src/main/java</source>
										<source>../frontend/src/main/java</source>
									</sources>
								</configuration>
							</execution>
							<execution>
								<id>add-resource</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>add-resource</goal>
								</goals>
								<configuration>
									<resources>
										<resource>
											<directory>../uicommonweb/src/main/resources</directory>
											<directory>../gwt-extension/src/main/resources
											</directory>
											<directory>../frontend/src/main/resources</directory>
											<targetPath>resources</targetPath>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>codehaus</id>
			<name>Codehaus Releases</name>
			<url>http://repository.codehaus.org/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

</project>
